# nodejs_bzlmod_example

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE
