module(
    name = "use-nodejs",
    version = "0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.0.3")
bazel_dep(name = "rules_nodejs", version = "4.4.6")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(name = "node16", node_version = "16.9.0")
use_repo(node, "node16_toolchains")
